word2imop omgezet naar 1.0.3

--- a/word2imop/sjabloon/Sjabloon.ini
+++ b/word2imop/sjabloon/Sjabloon.ini
@@ -898,7 +898,7 @@ Aantal=19
 4=werk- en loopbaan|/tooi/def/concept/c_30e85e85
 5=economie en ondernemen|/tooi/def/concept/c_9fbcfc19
 6=familie, jeugd en gezin|/tooi/def/concept/c_6bdc2b89
-7=financi\u00EBn|/tooi/def/concept/c_dfcf3a97
+7=financiën|/tooi/def/concept/c_dfcf3a97
 8=gezondheid en zorg|/tooi/def/concept/c_c95f4dd4
 9=immigratie, integratie en inburgering|/tooi/def/concept/c_56a74243
 10=internationale- en ontwikkelingssamenwerking|/tooi/def/concept/c_33cf4691
