--- a/Transformatie 1.0.4-rc/build.xml
+++ b/Transformatie 1.0.4-rc/build.xml
@@ -30,7 +30,10 @@
   <path id="input.list">
     <fileset dir="${input.dir}" includes="*.xml"/>
   </path>
-  <pathconvert property="file.list" refid="input.list" dirsep="/" pathsep=";"/>
+  <pathconvert property="file.list" refid="input.list" dirsep="/" pathsep=";" targetos="windows">
+    <map from="${basedir}" to="file:/${basedir}"/>
+  </pathconvert>
+  <pathconvert property="file.list" refid="input.list" dirsep="/" pathsep=";" targetos="unix"/>
 
   <!-- transformeer OP-bestanden -->
 
