soort bestuursorgaan toegevoegd

--- a/word2imop/sjabloon/Sjabloon.ini
+++ b/word2imop/sjabloon/Sjabloon.ini
@@ -911,11 +911,11 @@ Aantal=101
 100=wonen, onroerend goed, bouwrecht - onroerend goedrecht|/tooi/def/concept/c_43c42162
 101=wonen, onroerend goed, bouwrecht|/tooi/def/concept/c_3e6b35e2
 
-[geen]
+[id_geen]
 Aantal=1
 1=geen|geen
 
-[gemeente]
+[id_gemeente]
 Aantal=355
 1=gemeente Aa en Hunze|/tooi/id/gemeente/gm1680
 2=gemeente Aalsmeer|/tooi/id/gemeente/gm0358
@@ -1273,7 +1273,7 @@ Aantal=355
 354=gemeente Zwijndrecht|/tooi/id/gemeente/gm0642
 355=gemeente Zwolle|/tooi/id/gemeente/gm0193
 
-[ministerie]
+[id_ministerie]
 Aantal=12
 1=ministerie van Algemene Zaken|/tooi/id/ministerie/mnre1010
 2=ministerie van Binnenlandse Zaken en Koninkrijksrelaties|/tooi/id/ministerie/mnre1034
@@ -1288,7 +1288,7 @@ Aantal=12
 11=ministerie van Sociale Zaken en Werkgelegenheid|/tooi/id/ministerie/mnre1073
 12=ministerie van Volksgezondheid, Welzijn en Sport|/tooi/id/ministerie/mnre1025
 
-[provincie]
+[id_provincie]
 Aantal=12
 1=provincie Drenthe|/tooi/id/provincie/pv22
 2=provincie Flevoland|/tooi/id/provincie/pv24
@@ -1303,7 +1303,7 @@ Aantal=12
 11=provincie Zeeland|/tooi/id/provincie/pv29
 12=provincie Zuid-Holland|/tooi/id/provincie/pv28
 
-[waterschap]
+[id_waterschap]
 Aantal=21
 1=waterschap Aa en Maas|/tooi/id/waterschap/ws0654
 2=waterschap Amstel, Gooi en Vecht|/tooi/id/waterschap/ws0155
@@ -1326,6 +1326,34 @@ Aantal=21
 19=waterschap Limburg|/tooi/id/waterschap/ws0665
 20=Wetterskip Fryslân|/tooi/id/waterschap/ws0653
 21=waterschap Zuiderzeeland|/tooi/id/waterschap/ws0650
+
+[bestuursorgaan_geen]
+Aantal=1
+1=geen|geen
+
+[bestuursorgaan_gemeente]
+Aantal=3
+1=burgemeester|/tooi/def/thes/kern/c_2c4e7407
+2=college van burgemeester en wethouders|/tooi/def/thes/kern/c_28ecfd6d
+3=gemeenteraad|/tooi/def/thes/kern/c_2a7d8663
+
+[bestuursorgaan_ministerie]
+Aantal=3
+1=minister|/tooi/def/thes/kern/c_bcfb7b4e
+2=regering|/tooi/def/thes/kern/c_91fb5e42
+3=staatssecretaris|/tooi/def/thes/kern/c_3aaa4d12
+
+[bestuursorgaan_provincie]
+Aantal=3
+1=commissaris van de Koning|/tooi/def/thes/kern/c_e24d39f6
+2=gedeputeerde staten|/tooi/def/thes/kern/c_61676cbc
+3=provinciale staten|/tooi/def/thes/kern/c_411b4e4a
+
+[bestuursorgaan_waterschap]
+Aantal=3
+1=algemeen bestuur|/tooi/def/thes/kern/c_70c87e3d
+2=dagelijks bestuur|/tooi/def/thes/kern/c_5cc92c89
+3=dijkgraaf|/tooi/def/thes/kern/c_f70a6113
 
 [procedure]
 Aantal=10
