--- a/unificeringsscript/unificeringsscript/build.xml
+++ b/unificeringsscript/unificeringsscript/build.xml
@@ -87,7 +87,6 @@
         <param name="oldOWId" path="org/text()"/>
         <param name="newOWId" path="new/text()"/>
         <actions>
-          <echo message="----------   ROUND 1:@{owfile.name}      @{oldOWId}"/>
           <xslt in="${output.dir}/@{owfile.name}" out="${temp.dir}/@{owfile.name}" extension=".xml" style="owids.xsl" processor="trax" force="true">
             <param name="oldOWId" expression="@{oldOWId}"/>
             <param name="newOWId" expression="@{newOWId}"/>
@@ -100,11 +99,9 @@
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/owids/owid/referencefile">
         <param name="referencefile.name" path="text()"/>
-        <param name="owfile.name" path="../@sourcefile"/>
         <param name="oldOWId" path="../org/text()"/>
         <param name="newOWId" path="../new/text()"/>
         <actions>
-          <echo message="----------   ROUND 2:@{owfile.name}   @{referencefile.name}     @{oldOWId}"/>
           <xslt in="${output.dir}/@{referencefile.name}" out="${temp.dir}/@{referencefile.name}" extension=".xml" style="owids.xsl" processor="trax" force="true">
             <param name="oldOWId" expression="@{oldOWId}"/>
             <param name="newOWId" expression="@{newOWId}"/>
@@ -116,8 +113,166 @@
     
   </target>
 
+  <target name="leveringid_opdrachtparameters" description="Verandert leveringid en enkele andere parameters in opdracht en ow-bestanden door er een datum/tijd string achter te zetten.">
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/leveringId">
+        <param name="opdracht.name" path="@sourcefile"/>
+        <param name="oldId" path="org/text()"/>
+        <param name="newId" path="new/text()"/>
+        <actions>
+          <xslt in="${output.dir}/@{opdracht.name}" out="${temp.dir}/@{opdracht.name}" extension=".xml" style="leveringid_opdracht.xsl" processor="trax" force="true">
+            <param name="oldId" expression="@{oldId}"/>
+            <param name="newId" expression="@{newId}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{opdracht.name}" tofile="${output.dir}/@{opdracht.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+    
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/leveringId/referencefile">
+        <param name="referencefile.name" path="text()"/>
+        <param name="oldId" path="../org/text()"/>
+        <param name="newId" path="../new/text()"/>
+        <actions>
+          <xslt in="${output.dir}/@{referencefile.name}" out="${temp.dir}/@{referencefile.name}" extension=".xml" style="leveringid_opdracht.xsl" processor="trax" force="true">
+            <param name="oldId" expression="@{oldId}"/>
+            <param name="newId" expression="@{newId}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{referencefile.name}" tofile="${output.dir}/@{referencefile.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+  </target>
+  
+  <target name="doelids" description="Verandert Doelids door er een datum/tijd string achter te zetten.">
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/file[contains(@type,'manifest_ow.xml')]">
+        <param name="file.name" path="name/text()"/>
+        <param name="doelId" path="../doelId/text()"/>
+        <actions>
+          <xslt in="${output.dir}/@{file.name}" out="${temp.dir}/@{file.name}" extension=".xml" style="doelids.xsl" processor="trax" force="true">
+            <param name="doelId" expression="@{doelId}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{file.name}" tofile="${output.dir}/@{file.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+    
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/file[contains(@type,'besluit.xml')]">
+        <param name="file.name" path="name/text()"/>
+        <param name="doelId" path="../doelId/text()"/>
+        <actions>
+          <xslt in="${output.dir}/@{file.name}" out="${temp.dir}/@{file.name}" extension=".xml" style="doelids.xsl" processor="trax" force="true">
+            <param name="doelId" expression="@{doelId}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{file.name}" tofile="${output.dir}/@{file.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+  </target>
+    
+    <target name="besluitregelingids" description="Verandert Besluit en RegelingsIds door er een datum/tijd string in het vrij invulbare deel te zetten.">
+      <!-- BESLUIT -->
+      <!-- REGELING -->
+      <xmltask source="${temp.dir}/index.xml">
+        <call path="index">
+          <param name="besluit.name" path="file[contains(@type,'besluit.xml')]/name/text()"/>
+          <param name="manifest-ow.name" path="file[contains(@type,'manifest-ow.xml')]/name/text()"/>
+          <param name="besluitFrbrWork" path="besluitId/FRBRWork/text()"/>
+          <param name="besluitFrbrExpression" path="besluitId/FRBRExpression/text()"/>
+          <param name="regelingFrbrWork" path="regelingId/FRBRWork/text()"/>
+          <param name="regelingFrbrExpression" path="regelingId/FRBRExpression/text()"/>
+          <actions>
+            <xslt in="${output.dir}/@{besluit.name}" out="${temp.dir}/@{besluit.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+              <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
+              <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
+              <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
+              <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
+            </xslt>
+            <copy file="${temp.dir}/@{besluit.name}" tofile="${output.dir}/@{besluit.name}"/>
+            <xslt in="${output.dir}/@{manifest-ow.name}" out="${temp.dir}/@{manifest-ow.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+              <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
+              <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
+              <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
+              <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
+            </xslt>
+            <copy file="${temp.dir}/@{manifest-ow.name}" tofile="${output.dir}/@{manifest-ow.name}"/>
+          </actions>
+        </call>
+      </xmltask>
+      <!-- GIO's -->
+      <xmltask source="${temp.dir}/index.xml">
+        <call path="index/file[contains(@type,'gio.xml')]">
+          <param name="giofile.name" path="name/text()"/>
+          <param name="besluitFrbrWork" path="../besluitId/FRBRWork/text()"/>
+          <param name="besluitFrbrExpression" path="../besluitId/FRBRExpression/text()"/>
+          <param name="regelingFrbrWork" path="../regelingId/FRBRWork/text()"/>
+          <param name="regelingFrbrExpression" path="../regelingId/FRBRExpression/text()"/>
+          <actions>
+            <xslt in="${output.dir}/@{giofile.name}" out="${temp.dir}/@{giofile.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+              <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
+              <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
+              <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
+              <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
+            </xslt>
+            <copy file="${temp.dir}/@{giofile.name}" tofile="${output.dir}/@{giofile.name}"/>
+          </actions>
+        </call>
+      </xmltask>
+    </target>
+    
+    
+  <target name="checksum.execute">
+    <basename property="file.name" file="${file.fullname}"/>
+    <checksum file="${file.fullname}" algorithm="SHA-512" property="file.checksum"/>
+    <xslt in="template.xml" out="${temp.dir}/checksum/${file.name}.xml" style="checksum.xsl" processor="trax" force="true">
+      <param name="file.name" expression="${file.name}"/>
+      <param name="file.fullname" expression="${file.fullname}"/>
+      <param name="file.checksum" expression="${file.checksum}"/>
+    </xslt>
+  </target>
+  
+  <target name="checksum" description="Maak hash-codes">
+    <foreach target="checksum.execute" param="file.fullname">
+      <path>
+        <fileset dir="${temp.dir}" casesensitive="yes">
+          <patternset id="non.test.sources">
+            <include name="**/*.gml"/>
+          </patternset>
+        </fileset>
+      </path>
+    </foreach>
+  </target>
+  
+  <target name="checksum_gio" description="Gebruikt de informatie van de interne ANT checksum functionaliteit.">
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/file[contains(@type,'gio.xml')]">
+        <param name="giofile.name" path="name/text()"/>
+        <actions>
+          <echo message="@{giofile.name}"></echo>
+          <propertyregex property="gmlfile.name" input="@{giofile.name}"
+            regexp="([^#]*)#([^#]*)"
+            select="\1"
+            override="true" />
+          <echo message="${temp.dir}"></echo>
+          <echo message="${gmlfile.name}"></echo>
+          <checksum file="${temp.dir}/${gmlfile.name}" algorithm="SHA-512" property="file.checksum"/>
+          <echo message="${file.checksum}"></echo>
+          <xslt in="${output.dir}/@{giofile.name}" out="${temp.dir}/@{giofile.name}" extension=".xml" style="checksum_hash.xsl" processor="trax" force="true">
+            <param name="file.checksum" expression="${file.checksum}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{giofile.name}" tofile="${output.dir}/@{giofile.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+  </target>
+  
+    
   <!-- totale transformatie -->
 
-  <target name="main" description="Totale transformatie" depends="init, copy, index, guids, owids"/>
+    <target name="main" description="Totale transformatie" 
+      depends="init, copy, index, guids, owids, leveringid_opdrachtparameters, doelids, besluitregelingids, checksum_gio"/>
 
 </project>
