--- a/unificeringsscript/unificeringsscript/build.xml
+++ b/unificeringsscript/unificeringsscript/build.xml
@@ -241,8 +241,8 @@
         <param name="newIoRefId" path="newIoRefId/text()"/>
         <param name="oldIoWorkId" path="oldIoWorkId/text()"/>
         <param name="newIoWorkId" path="newIoWorkId/text()"/>
-        <param name="gmlFile" path="gml/text()"/>
-        <param name="gioFile" path="gio/text()"/>
+        <param name="gmlFile" path="gml/file/text()"/>
+        <param name="gioFile" path="gio/file/text()"/>
         <actions>
           <xslt in="${output.dir}/@{besluit.name}" out="${temp.dir}/@{besluit.name}" extension=".xml" style="informatieobjectRefs.xsl" processor="trax" force="true">
             <param name="oldIoRefId" expression="@{oldIoRefId}"/>
