--- a/unificeringsscript/unificeringsscript/build.xml
+++ b/unificeringsscript/unificeringsscript/build.xml
@@ -52,6 +52,7 @@
 
   <target name="index" description="Creëert een index van de soorten bestanden waaruit de dataset bestaat.">
     <xslt in="template.xml" out="${temp.dir}/index.xml" style="index.xsl" processor="trax" force="true">
+      <classpath location="saxon9he.jar"/>
       <param name="file.list" expression="${file.list}"/>
       <param name="base.dir" expression="${base.dir}"/>
     </xslt>
@@ -61,15 +62,24 @@
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/guids/guid">
         <param name="gmlfile.name" path="@gmlfile"/>
-        <param name="locatiefile.name" path="@locatiefile"/>
         <param name="oldGUID" path="org/text()"/>
         <param name="newGUID" path="new/text()"/>
         <actions>
           <xslt in="${output.dir}/@{gmlfile.name}" out="${temp.dir}/@{gmlfile.name}" extension=".gml" style="guids.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="oldGUID" expression="@{oldGUID}"/>
             <param name="newGUID" expression="@{newGUID}"/>
           </xslt>
           <copy file="${temp.dir}/@{gmlfile.name}" tofile="${output.dir}/@{gmlfile.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/guids/guidInOw">
+        <param name="locatiefile.name" path="@locatiefile"/>
+        <param name="oldGUID" path="org/text()"/>
+        <param name="newGUID" path="new/text()"/>
+        <actions>
           <xslt in="${output.dir}/@{locatiefile.name}" out="${temp.dir}/@{locatiefile.name}" extension=".xml" style="guids.xsl" processor="trax" force="true">
             <param name="oldGUID" expression="@{oldGUID}"/>
             <param name="newGUID" expression="@{newGUID}"/>
@@ -82,27 +92,26 @@
 
   <target name="owids" description="Verandert owids door er een datum/tijd string achter te zetten.">
     <xmltask source="${temp.dir}/index.xml">
-      <call path="index/owids/owid">
-        <param name="owfile.name" path="@sourcefile"/>
-        <param name="oldOWId" path="org/text()"/>
-        <param name="newOWId" path="new/text()"/>
+      <call path="index/owids">
+        <param name="sourceFileName" path="@sourceFileName"/>
         <actions>
-          <xslt in="${output.dir}/@{owfile.name}" out="${temp.dir}/@{owfile.name}" extension=".xml" style="owids.xsl" processor="trax" force="true">
-            <param name="oldOWId" expression="@{oldOWId}"/>
-            <param name="newOWId" expression="@{newOWId}"/>
-          </xslt>
-          <copy file="${temp.dir}/@{owfile.name}" tofile="${output.dir}/@{owfile.name}"/>
+                <xslt in="${output.dir}/@{sourceFileName}" out="${temp.dir}/@{sourceFileName}" extension=".xml" style="owids.xsl" processor="trax" force="true">
+                  <classpath location="saxon9he.jar"/>
+                  <param name="oldOWId" expression="@{oldOWId}"/>
+                  <param name="newOWId" expression="@{newOWId}"/>
+                </xslt>
+          <copy file="${temp.dir}/@{sourceFileName}" tofile="${output.dir}/@{sourceFileName}"/>
         </actions>
       </call>
     </xmltask>
-    
-    <xmltask source="${temp.dir}/index.xml">
+<!--    <xmltask source="${temp.dir}/index.xml">
       <call path="index/owids/owid/referencefile">
         <param name="referencefile.name" path="text()"/>
         <param name="oldOWId" path="../org/text()"/>
         <param name="newOWId" path="../new/text()"/>
         <actions>
-          <xslt in="${output.dir}/@{referencefile.name}" out="${temp.dir}/@{referencefile.name}" extension=".xml" style="owids.xsl" processor="trax" force="true">
+          <xslt in="${output.dir}/@{referencefile.name}" out="${temp.dir}/@{referencefile.name}" extension=".xml" style="owidsreference.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="oldOWId" expression="@{oldOWId}"/>
             <param name="newOWId" expression="@{newOWId}"/>
           </xslt>
@@ -110,8 +119,7 @@
         </actions>
       </call>
     </xmltask>
-    
-  </target>
+-->  </target>
 
   <target name="leveringid_opdrachtparameters" description="Verandert leveringid en enkele andere parameters in opdracht en ow-bestanden door er een datum/tijd string achter te zetten.">
     <xmltask source="${temp.dir}/index.xml">
@@ -121,6 +129,7 @@
         <param name="newId" path="new/text()"/>
         <actions>
           <xslt in="${output.dir}/@{opdracht.name}" out="${temp.dir}/@{opdracht.name}" extension=".xml" style="leveringid_opdracht.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="oldId" expression="@{oldId}"/>
             <param name="newId" expression="@{newId}"/>
           </xslt>
@@ -128,7 +137,7 @@
         </actions>
       </call>
     </xmltask>
-    
+
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/leveringId/referencefile">
         <param name="referencefile.name" path="text()"/>
@@ -136,6 +145,7 @@
         <param name="newId" path="../new/text()"/>
         <actions>
           <xslt in="${output.dir}/@{referencefile.name}" out="${temp.dir}/@{referencefile.name}" extension=".xml" style="leveringid_opdracht.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="oldId" expression="@{oldId}"/>
             <param name="newId" expression="@{newId}"/>
           </xslt>
@@ -144,7 +154,7 @@
       </call>
     </xmltask>
   </target>
-  
+
   <target name="doelids" description="Verandert Doelids door er een datum/tijd string achter te zetten.">
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/file[contains(@type,'manifest-ow.xml')]">
@@ -152,19 +162,21 @@
         <param name="doelId" path="../doelId/text()"/>
         <actions>
           <xslt in="${output.dir}/@{file.name}" out="${temp.dir}/@{file.name}" extension=".xml" style="doelids.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="doelId" expression="@{doelId}"/>
           </xslt>
           <copy file="${temp.dir}/@{file.name}" tofile="${output.dir}/@{file.name}"/>
         </actions>
       </call>
     </xmltask>
-    
+
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/file[contains(@type,'besluit.xml')]">
         <param name="file.name" path="name/text()"/>
         <param name="doelId" path="../doelId/text()"/>
         <actions>
           <xslt in="${output.dir}/@{file.name}" out="${temp.dir}/@{file.name}" extension=".xml" style="doelids.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="doelId" expression="@{doelId}"/>
           </xslt>
           <copy file="${temp.dir}/@{file.name}" tofile="${output.dir}/@{file.name}"/>
@@ -172,67 +184,81 @@
       </call>
     </xmltask>
   </target>
-    
-    <target name="besluitregelingids" description="Verandert Besluit en RegelingsIds door er een datum/tijd string in het vrij invulbare deel te zetten.">
-      <!-- BESLUIT -->
-      <!-- REGELING -->
-      <xmltask source="${temp.dir}/index.xml">
-        <call path="index">
-          <param name="besluit.name" path="file[contains(@type,'besluit.xml')]/name/text()"/>
-          <param name="manifest-ow.name" path="file[contains(@type,'manifest-ow.xml')]/name/text()"/>
-          <param name="besluitFrbrWork" path="besluitId/FRBRWork/text()"/>
-          <param name="besluitFrbrExpression" path="besluitId/FRBRExpression/text()"/>
-          <param name="regelingFrbrWork" path="regelingId/FRBRWork/text()"/>
-          <param name="regelingFrbrExpression" path="regelingId/FRBRExpression/text()"/>
-          <param name="wordt" path="besluit/versies/wordt/text()"/>
-          <param name="instrumentversie" path="besluit/instrumentversie/text()"/>
-          <actions>
-            <xslt in="${output.dir}/@{besluit.name}" out="${temp.dir}/@{besluit.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
-              <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
-              <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
-              <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
-              <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
-              <param name="wordt" expression="@{wordt}"/>
-              <param name="instrumentversie" expression="@{instrumentversie}"/>
-            </xslt>
-            <copy file="${temp.dir}/@{besluit.name}" tofile="${output.dir}/@{besluit.name}"/>
-            <xslt in="${output.dir}/@{manifest-ow.name}" out="${temp.dir}/@{manifest-ow.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
-              <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
-              <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
-              <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
-              <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
-              <param name="wordt" expression="@{wordt}"/>
-              <param name="instrumentversie" expression="@{instrumentversie}"/>
-            </xslt>
-            <copy file="${temp.dir}/@{manifest-ow.name}" tofile="${output.dir}/@{manifest-ow.name}"/>
-          </actions>
-        </call>
-      </xmltask>
-      <!-- GIO's -->
-      <xmltask source="${temp.dir}/index.xml">
-        <call path="index/file[contains(@type,'gio.xml')]">
-          <param name="giofile.name" path="name/text()"/>
-          <param name="besluitFrbrWork" path="../besluitId/FRBRWork/text()"/>
-          <param name="besluitFrbrExpression" path="../besluitId/FRBRExpression/text()"/>
-          <param name="regelingFrbrWork" path="../regelingId/FRBRWork/text()"/>
-          <param name="regelingFrbrExpression" path="../regelingId/FRBRExpression/text()"/>
-          <param name="wordt" path="../besluit/versies/wordt/text()"/>
-          <param name="instrumentversie" path="../besluit/instrumentversie/text()"/>
-          <actions>
-            <xslt in="${output.dir}/@{giofile.name}" out="${temp.dir}/@{giofile.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
-              <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
-              <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
-              <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
-              <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
-              <param name="wordt" expression="@{wordt}"/>
-              <param name="instrumentversie" expression="@{instrumentversie}"/>
-            </xslt>
-            <copy file="${temp.dir}/@{giofile.name}" tofile="${output.dir}/@{giofile.name}"/>
-          </actions>
-        </call>
-      </xmltask>
-    </target>
-  
+
+  <target name="besluitregelingids" description="Verandert Besluit en RegelingsIds door er een datum/tijd string in het vrij invulbare deel te zetten.">
+    <!-- BESLUIT -->
+    <!-- REGELING -->
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index">
+        <param name="besluit.name" path="file[contains(@type,'besluit.xml')]/name/text()"/>
+        <param name="manifest-ow.name" path="file[contains(@type,'manifest-ow.xml')]/name/text()"/>
+        <param name="besluitFrbrWork" path="besluitId/FRBRWork/text()"/>
+        <param name="besluitFrbrExpression" path="besluitId/FRBRExpression/text()"/>
+        <param name="regelingFrbrWork" path="regelingId/FRBRWork/text()"/>
+        <param name="regelingFrbrExpression" path="regelingId/FRBRExpression/text()"/>
+        <param name="instrumentversie" path="besluit/instrumentversie/text()"/>
+        <actions>
+          <xslt in="${output.dir}/@{besluit.name}" out="${temp.dir}/@{besluit.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
+            <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
+            <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
+            <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
+            <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
+            <param name="instrumentversie" expression="@{instrumentversie}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{besluit.name}" tofile="${output.dir}/@{besluit.name}"/>
+          <xslt in="${output.dir}/@{manifest-ow.name}" out="${temp.dir}/@{manifest-ow.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
+            <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
+            <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
+            <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
+            <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
+            <param name="instrumentversie" expression="@{instrumentversie}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{manifest-ow.name}" tofile="${output.dir}/@{manifest-ow.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+    <!-- Wordt -->
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/besluit/wordt">
+        <param name="besluit.name" path="../file[contains(@type,'besluit.xml')]/name/text()"/>
+        <param name="oldWordt" path="old/text()"/>
+        <param name="newWordt" path="new/text()"/>
+        <actions>
+          <xslt in="${output.dir}/@{besluit.name}" out="${temp.dir}/@{besluit.name}" extension=".xml" style="wordt.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
+            <param name="oldWordt" expression="@{oldWordt}"/>
+            <param name="newWordt" expression="@{newWordt}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{besluit.name}" tofile="${output.dir}/@{besluit.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+    <!-- GIO's -->
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/file[contains(@type,'gio.xml')]">
+        <param name="giofile.name" path="name/text()"/>
+        <param name="besluitFrbrWork" path="../besluitId/FRBRWork/text()"/>
+        <param name="besluitFrbrExpression" path="../besluitId/FRBRExpression/text()"/>
+        <param name="regelingFrbrWork" path="../regelingId/FRBRWork/text()"/>
+        <param name="regelingFrbrExpression" path="../regelingId/FRBRExpression/text()"/>
+        <param name="instrumentversie" path="../besluit/instrumentversie/text()"/>
+        <actions>
+          <xslt in="${output.dir}/@{giofile.name}" out="${temp.dir}/@{giofile.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
+            <param name="besluitFrbrWork" expression="@{besluitFrbrWork}"/>
+            <param name="besluitFrbrExpression" expression="@{besluitFrbrExpression}"/>
+            <param name="regelingFrbrWork" expression="@{regelingFrbrWork}"/>
+            <param name="regelingFrbrExpression" expression="@{regelingFrbrExpression}"/>
+            <param name="instrumentversie" expression="@{instrumentversie}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{giofile.name}" tofile="${output.dir}/@{giofile.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+  </target>
+
   <target name="informatieobjectRefs" description="Vervangt de GIO-objctrefs in besluit, gio's en gml's">
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/besluit/informatieobjectRef">
@@ -245,6 +271,7 @@
         <param name="gioFile" path="gio/file/text()"/>
         <actions>
           <xslt in="${output.dir}/@{besluit.name}" out="${temp.dir}/@{besluit.name}" extension=".xml" style="informatieobjectRefs.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="oldIoRefId" expression="@{oldIoRefId}"/>
             <param name="newIoRefId" expression="@{newIoRefId}"/>
             <param name="oldIoWorkId" expression="@{oldIoWorkId}"/>
@@ -259,6 +286,7 @@
           </xslt>
           <copy file="${temp.dir}/@{gmlFile}" tofile="${output.dir}/@{gmlFile}"/>
           <xslt in="${output.dir}/@{gioFile}" out="${temp.dir}/@{gioFile}" extension=".xml" style="informatieobjectRefs.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
             <param name="oldIoRefId" expression="@{oldIoRefId}"/>
             <param name="newIoRefId" expression="@{newIoRefId}"/>
             <param name="oldIoWorkId" expression="@{oldIoWorkId}"/>
@@ -269,8 +297,8 @@
       </call>
     </xmltask>
   </target>
-    
-    
+
+
   <target name="checksum_gio" description="Gebruikt de informatie van de interne ANT checksum functionaliteit.">
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/file[contains(@type,'gio.xml')]">
@@ -284,9 +312,9 @@
       </call>
     </xmltask>
   </target>
-  
+
   <!-- maak hash-code -->
-  
+
   <target name="checksum" description="Maak hash-codes">
     <foreach target="checksum.execute" param="file.fullname">
       <path>
@@ -294,7 +322,7 @@
       </path>
     </foreach>
   </target>
-  
+
   <target name="checksum.execute">
     <basename property="file.name" file="${file.fullname}"/>
     <checksum file="${file.fullname}" algorithm="SHA-512" property="file.checksum"/>
@@ -304,10 +332,11 @@
       <param name="file.checksum" expression="${file.checksum}"/>
     </xslt>
   </target>
-    
+
   <!-- totale transformatie -->
 
-    <target name="main" description="Totale transformatie" 
-      depends="init, copy, index, guids, owids, leveringid_opdrachtparameters, doelids, besluitregelingids, informatieobjectRefs, checksum, checksum_gio"/>
+  <target name="main" description="Totale transformatie"
+    depends="init, copy, index, owids"/>
+  <!-- , guids, leveringid_opdrachtparameters, doelids, besluitregelingids, informatieobjectRefs, checksum, checksum_gio -->
 
 </project>
