--- a/unificeringsscript/multi-versie-unificeringsscript/build.xml
+++ b/unificeringsscript/multi-versie-unificeringsscript/build.xml
@@ -538,8 +538,6 @@
         <if>
           <available file="bron_@{number}" type="dir"/>
           <then>
-            <echo message="'======================================'"/>
-            <echo message="temp_@{number}.dir"/>
             <xmltask source="${temp_@{number}.dir}/index.xml">
               <call path="index/file[contains(@type,'manifest-ow.xml')]">
                 <param name="file.name" path="name/text()"/>
@@ -914,6 +912,32 @@
         </actions>
       </call>
     </xmltask>
+    <for list="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15" param="number">
+      <sequential>
+        <if>
+          <available file="bron_@{number}" type="dir"/>
+          <then>
+            <xmltask source="${temp_@{number}.dir}/index.xml">
+              <call path="index/file[contains(@type,'gio.xml')]">
+                <param name="giofile.name" path="name/text()"/>
+                <actions>
+                  <if>
+                    <available file="bron_@{number}/@{gioFile}"/>
+                    <then>
+                      <xslt in="${output_@{number}.dir}/@{giofile.name}" out="${temp_@{number}.dir}/@{giofile.name}" extension=".xml" style="checksum_hash.xsl" processor="trax" force="true">
+                        <classpath location="saxon9he.jar"/>
+                        <param name="temp.dir" expression="${temp.dir}"/>
+                      </xslt>
+                      <copy file="${temp_@{number}.dir}/@{giofile.name}" tofile="${output_@{number}.dir}/@{giofile.name}"/>
+                    </then>
+                  </if>
+                </actions>
+              </call>
+            </xmltask>
+          </then>
+        </if>
+      </sequential>
+    </for>
   </target>
 
   <!-- maak hash-code -->
@@ -924,6 +948,22 @@
         <fileset dir="${temp.dir}"/>
       </path>
     </foreach>
+    <for list="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15" param="number">
+      <sequential>
+        <if>
+          <available file="bron_@{number}" type="dir"/>
+          <then>
+            <foreach target="checksum.execute.2">
+              <param="file.fullname"/> 
+              <param="@{number}"/>
+              <path>
+                <fileset dir="${temp_@{number}.dir}"/>
+              </path>
+            </foreach>
+          </then>
+        </if>
+      </sequential>
+    </for>
   </target>
 
   <target name="checksum.execute">
@@ -937,9 +977,22 @@
     </xslt>
   </target>
 
+  <target name="checksum.execute.2">
+    <basename property="file.name" file="${file.fullname}"/>
+    <basename property="number" file="${number}"/>
+    <checksum file="${file.fullname}" algorithm="SHA-512" property="file.checksum"/>
+    <xslt in="template.xml" out="${temp.dir}/checksum/${file.name}.xml" style="checksum.xsl" processor="trax" force="true">
+      <classpath location="saxon9he.jar"/>
+      <param name="file.name" expression="${file.name}"/>
+      <param name="file.fullname" expression="${file.fullname}"/>
+      <param name="file.checksum" expression="${file.checksum}"/>
+    </xslt>
+  </target>
+
   <!-- totale transformatie -->
 
-  <target name="main" description="Totale transformatie" depends="init, copy, index, besluitregelingids, informatieobjectRefs, guids,  owids, leveringid_opdrachtparameters, doelids, checksum, checksum_gio"/>
+  <target name="main" description="Totale transformatie"
+    depends="init, copy, index, besluitregelingids, informatieobjectRefs, guids,  owids, leveringid_opdrachtparameters, doelids, checksum, checksum_gio"/>
   <!--  -->
 
 </project>
